Removed version from title

--- a/GuideBook.tex
+++ b/GuideBook.tex
@@ -5,7 +5,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{listings}
 
-\title{Programming competition guidebook \\ v0.1}
+\title{Programming competition guidebook}
 \author{
   Juan J. Alvarez \\
   juan.alvarez7@upr.edu \\
