--- a/GuideBook.tex
+++ b/GuideBook.tex
@@ -106,7 +106,7 @@
         \end{algorithm}
 
       \subsubsection{Implementation}
-        This method has a huge flaw due to the fact that it uses 64-bit integers to calculate the result, it is not capable of calculating the factorial of any number larger than 16.
+        This method has a huge flaw due to the fact that it uses 64-bit signed integers (Java long) to calculate the result, it is not capable of calculating the factorial of any number larger than 16.
         \lstinputlisting{code/factorial1.java}
 
       \subsubsection{BigInteger Implementation}
@@ -176,5 +176,12 @@
       \subsubsection{Iterating over the unique elements in a set}
       With the previously defined method we can iterate over the unique elements in a list like this:
       \lstinputlisting{code/uniqueelements3.java}
+
+		\subsection{Powersets}
+			A powerset is a set containing all of the possible subsets of an original set. For example, the powerset of {1, 2, 3} is {{}, {1}, {2}. {3}, {1, 2}, {1, 3}, {2, 3}, {1, 2, 3}}. Powersets in programming are useful to identify which combination of elements yields certain expected results, for example given the set {1, 2, 3, 4, 5} with powersets we can identify that the following set contains the subsets that when added equal 4 {{1, 3}, {4}}.
+
+			\subsubsection{Binary Powersets}
+			A binary powerset uses 64 bit integers(long) to handle the combinations. Due to technical constraints using this type of powerset implementation the original set must not contain any more than 64 elements due to the fact that whether or not a single element exists in any particular subset is represented by a single bit in the combination integer. The following code is an example of binary powersets put to use with a set of characters, it prints every possible combination of characters (17 combinations for 4 characters).
+			\lstinputlisting{code/powerset1.java}
 
 \end{document}
